# civil-pulse-service

./: Cargo.toml  README.md  justfile  rust-toolchain.toml  setup-linux-arch.sh  setup-macos.sh
crates/hello-world/: Cargo.toml
crates/hello-world/src/: lib.rs  main.rs
crates/hello-world/src/routes/: base.rs  data.rs  mod.rs  scrape.rs
playground/CinchBlue/: Cargo.toml
playground/CinchBlue/src/: main.rs
playground/Days0fthnder/: Cargo.toml
playground/chris-av/: Cargo.toml
src/: main.rs
